Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: yakindario.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
